Bonus Page HTML CSS

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <menu class="header__menu menu">
             <nav class="navigation menu__navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__list-item">SITES DE APOSTAS</li>
-                    <li class="navigation__list-item">BÔNUS DE CADASTRO</li>
+                    <li><a class="navigation__list-item" href="index.html">SITES DE APOSTAS</a></li>
+                    <li><a class="navigation__list-item" href="/bonus.html">BÔNUS DE
+                            CADASTRO</a></li>
                     <li class="navigation__list-item"> CASSINOS</li>
                     <li class="navigation__list-item">COMPARADOR DE CASAS</li>
                     <li class="navigation__list-item">GUIAS</li>
@@ -1508,7 +1509,8 @@
 
     </main>
     <footer class="footer">
-        <svg style="position:absolute; right: 0%; top: 40%; " width="12vw" height="353" viewBox="0 0 269 353" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg style="position:absolute; right: 0%; top: 40%; " width="12vw" height="353" viewBox="0 0 269 353"
+            fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20.7172 159.738C19.115 161.473 17.0342 162.694 14.7381 163.247C12.4419 163.8 10.0334 163.659 7.8172 162.843C5.60096 162.027 3.67646 160.572 2.28707 158.662C0.897668 156.752 0.10576 154.473 0.0114759 152.113C-0.0828087 149.753 0.524764 147.418 1.75737 145.403C2.98997 143.388 4.79226 141.784 6.93633 140.794C9.08041 139.804 11.47 139.471 13.8029 139.839C16.1358 140.207 18.3074 141.258 20.0429 142.86C22.3683 145.01 23.7454 147.995 23.8719 151.159C23.9983 154.324 22.8637 157.409 20.7172 159.738Z"
                 fill="#0057FF" />
