Guide Page HTML CSS

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                     <li><a class="navigation__list-item" href="/bonus.html">BÔNUS DE
                             CADASTRO</a></li>
                     <li class="navigation__list-item"> CASSINOS</li>
-                    <li class="navigation__list-item">COMPARADOR DE CASAS</li>
-                    <li class="navigation__list-item">GUIAS</li>
+                    <li><a class="navigation__list-item" href="guias.html">GUIAS</a></li>
                 </ul>
             </nav>
         </menu>
