--- a/bonus.html
+++ b/bonus.html
@@ -23,8 +23,7 @@
                     <li><a class="navigation__list-item" href="/bonus.html">BÔNUS DE
                             CADASTRO</a></li>
                     <li class="navigation__list-item"> CASSINOS</li>
-                    <li class="navigation__list-item">COMPARADOR DE CASAS</li>
-                    <li class="navigation__list-item">GUIAS</li>
+                    <li><a class="navigation__list-item" href="guias.html">GUIAS</a></li>
                 </ul>
             </nav>
         </menu>
@@ -742,7 +741,7 @@
                 </div>
 
             </div>
-            <svg class="lines lines__side lines__side--right" width="40vw" height="146" viewBox="0 0 835 146"
+            <svg class="lines lines__side lines__side--right " width="40vw" height="146" viewBox="0 0 835 146"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M622.281 72.4159L725.733 145.328C726.347 145.762 727.08 145.996 727.832 145.996C728.584 145.996 729.317 145.762 729.931 145.328L833.432 72.4841C834.222 71.9277 834.759 71.0803 834.925 70.1282C835.09 69.1762 834.87 68.1975 834.313 67.4075C833.757 66.6174 832.909 66.0808 831.956 65.9156C831.003 65.7504 830.024 65.9701 829.234 66.5265L727.837 137.901L626.479 66.4583C625.688 65.902 624.709 65.6822 623.757 65.8474C622.804 66.0126 621.956 66.5493 621.399 67.3393C620.843 68.1293 620.623 69.108 620.788 70.0601C620.953 71.0121 621.49 71.8596 622.281 72.4159Z"
