--- a/bonus.html
+++ b/bonus.html
@@ -22,7 +22,7 @@
                     <li><a class="navigation__list-item" href="index.html">SITES DE APOSTAS</a></li>
                     <li><a class="navigation__list-item" href="/bonus.html">BÔNUS DE
                             CADASTRO</a></li>
-                    <li class="navigation__list-item"> CASSINOS</li>
+                    <li><a class="navigation__list-item" href="/casino.html"> CASSINOS</a></li>
                     <li><a class="navigation__list-item" href="guias.html">GUIAS</a></li>
                 </ul>
             </nav>
@@ -30,13 +30,13 @@
     </header>
     <main>
         <div class="banner">
-            <div class="banner__block banner__block--main banner__block--bonus">
+            <div class="banner__block banner__block-main banner__block-bonus">
                 <div class="banner__text">
-                    <h1 class="banner__title banner__title--l">Casas De Apostas Com<span style="color: #FEAB41;"> <br>
+                    <h1 class="banner__title banner__title-l">Casas De Apostas Com<span style="color: #FEAB41;"> <br>
                             Bônus de Cadastro
                         </span>
                     </h1>
-                    <h4 class="banner__description banner__description--s">Tudo que você precisa saber sobre Bônus.
+                    <h4 class="banner__description banner__description-s">Tudo que você precisa saber sobre Bônus.
                         Entenda o que são e qual a importância dos Bônus de Registro e veja em quais outras promoções
                         ficar de olho nas casas de apostas. Dicas sobre quais sites oferecem os melhores Bônus de
                         Cadastro.
@@ -46,7 +46,7 @@
 
                 </div>
             </div>
-            <div class="banner__block filters filters__banner banner__block--line">
+            <div class="banner__block filters filters__banner banner__block-line">
                 <div class="banner__element element" style="margin-right: 15vw;  justify-content: left;">
                     <img class="element__image" src="img/list.png">
                     <p class="element__text">Ordenar por:</p>
@@ -431,12 +431,12 @@
                 <h2 class="tittle__2">Casas De Apostas
                     Com Bônus Grátis</span>
                 </h2>
-                <h4 class="tittle__3 best__tittle--3">Saiba quais são os sites de apostas que dão Bônus e Apostas Grátis
+                <h4 class="tittle__3 best__tittle-3">Saiba quais são os sites de apostas que dão Bônus e Apostas Grátis
                     aos seus usuários e quais os valores que você pode receber com eles!</h4>
             </div>
         </section>
 
-        <div class="banner__block filters filters__banner banner__block--line">
+        <div class="banner__block filters filters__banner banner__block-line">
             <div class="banner__element element" style="margin-right: 15vw;  justify-content: left;">
                 <img class="element__image" src="img/list.png">
                 <p class="element__text">Ordenar por:</p>
@@ -741,7 +741,7 @@
                 </div>
 
             </div>
-            <svg class="lines lines__side lines__side--right " width="40vw" height="146" viewBox="0 0 835 146"
+            <svg class="lines lines__side lines__side-right " width="40vw" height="146" viewBox="0 0 835 146"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M622.281 72.4159L725.733 145.328C726.347 145.762 727.08 145.996 727.832 145.996C728.584 145.996 729.317 145.762 729.931 145.328L833.432 72.4841C834.222 71.9277 834.759 71.0803 834.925 70.1282C835.09 69.1762 834.87 68.1975 834.313 67.4075C833.757 66.6174 832.909 66.0808 831.956 65.9156C831.003 65.7504 830.024 65.9701 829.234 66.5265L727.837 137.901L626.479 66.4583C625.688 65.902 624.709 65.6822 623.757 65.8474C622.804 66.0126 621.956 66.5493 621.399 67.3393C620.843 68.1293 620.623 69.108 620.788 70.0601C620.953 71.0121 621.49 71.8596 622.281 72.4159Z"
@@ -910,7 +910,7 @@
 
             <div class="opportunities__tittle tittle">
                 <div class="tittle__container">
-                    <h2 class="tittle__2 tittle__2--orange">Dúvidas Frequentes</h2>
+                    <h2 class="tittle__2 tittle__2-orange">Dúvidas Frequentes</h2>
                 </div>
                 <svg width="24vw" height="auto" viewBox="0 0 551 641" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_127_10696)">
@@ -1050,27 +1050,27 @@
         <div class="footer__container">
             <div class="logo footer__logo"></div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">ATUALIDADE</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">NOTÍCIAS</p>
-                    <p class="footer__navigation--item">GUIAS</p>
-                    <p class="footer__navigation--item">JOGOS DE HOJE</p>
+                <h3 class="footer__navigation-tittle">ATUALIDADE</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">NOTÍCIAS</p>
+                    <p class="footer__navigation-item">GUIAS</p>
+                    <p class="footer__navigation-item">JOGOS DE HOJE</p>
                 </div>
             </div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">APOSTAS</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">SITES DE APOSTAS</p>
-                    <p class="footer__navigation--item">CASSINOS</p>
-                    <p class="footer__navigation--item">BÔNUS DE REGISTRO</p>
+                <h3 class="footer__navigation-tittle">APOSTAS</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">SITES DE APOSTAS</p>
+                    <p class="footer__navigation-item">CASSINOS</p>
+                    <p class="footer__navigation-item">BÔNUS DE REGISTRO</p>
                 </div>
             </div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">INFORMAÇÃO</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">SOBRE NÓS</p>
-                    <p class="footer__navigation--item">CONTATO</p>
-                    <p class="footer__navigation--item">COMO AVALIAMOS</p>
+                <h3 class="footer__navigation-tittle">INFORMAÇÃO</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">SOBRE NÓS</p>
+                    <p class="footer__navigation-item">CONTATO</p>
+                    <p class="footer__navigation-item">COMO AVALIAMOS</p>
                 </div>
             </div>
             <div class="footer__countries countries">
