--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a class="navigation__list-item" href="index.html">SITES DE APOSTAS</a></li>
                     <li><a class="navigation__list-item" href="/bonus.html">BÔNUS DE
                             CADASTRO</a></li>
-                    <li class="navigation__list-item"> CASSINOS</li>
+                    <li><a class="navigation__list-item" href="/casino.html"> CASSINOS</a></li>
                     <li><a class="navigation__list-item" href="guias.html">GUIAS</a></li>
                 </ul>
             </nav>
@@ -30,13 +30,13 @@
     </header>
     <main>
         <div class="banner">
-            <div class="banner__block banner__block--main">
+            <div class="banner__block banner__block-main">
                 <div class="banner__text">
-                    <h1 class="banner__title banner__title--l"><span style="color: #FEAB41;">Casas De Apostas
+                    <h1 class="banner__title banner__title-l"><span style="color: #FEAB41;">Casas De Apostas
                         </span><br>
                         Melhores Casas De Apostas No Brasil
                     </h1>
-                    <h4 class="banner__description banner__description--s">Todas as informações sobre as
+                    <h4 class="banner__description banner__description-s">Todas as informações sobre as
                         melhores casas de apostas esportivas no país. Conheça todas as notícias sobre a Lei
                         do Jogo Online no Brasil. Aprenda a se tornar um apostador de alto nível com os nossos guias de
                         apostas gratuitos.
@@ -47,7 +47,7 @@
 
                 </div>
             </div>
-            <div class="banner__block filters filters__banner banner__block--line">
+            <div class="banner__block filters filters__banner banner__block-line">
                 <div class="banner__element element" style="margin-right: 15vw;  justify-content: left;">
                     <img class="element__image" src="img/list.png">
                     <p class="element__text">Ordenar por:</p>
@@ -427,7 +427,7 @@
                 <div class="bonuses__element element">
                     <p class="element__text">MERCADO DE APOSTAS</p>
                 </div>
-                <div class="bonuses__element element bonuses__element--arrows">
+                <div class="bonuses__element element bonuses__element-arrows">
                     <img class=" element__arrow" src="img/leftarrow.png">
                     <img class=" element__arrow" src="img/rightarrow.png">
                 </div>
@@ -483,7 +483,7 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2">Mantenha-se <br> Informado!
                     </h2>
-                    <h4 class="tittle__3 best__tittle--3">Conheça as melhores casas de apostas em atuação no Brasil!
+                    <h4 class="tittle__3 best__tittle-3">Conheça as melhores casas de apostas em atuação no Brasil!
                         Todas têm alta
                         reputação internacional e trazem plataformas de aposta seguras!</h4>
                 </div>
@@ -507,7 +507,7 @@
                 </svg>
             </div>
         </section>
-        <div class="banner__block filters filters__banner banner__block--line">
+        <div class="banner__block filters filters__banner banner__block-line">
             <div class="banner__element element" style="margin-right: 15vw;  justify-content: left;">
                 <img class="element__image" src="img/list.png">
                 <p class="element__text">Ordenar por:</p>
@@ -906,7 +906,7 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2">Recursos Das <br> <span style="color: #0057FF;">Casas De Apostas</span>
                     </h2>
-                    <h4 class="tittle__3 best__tittle--3">Toda casa de aposta deve oferecer alguns recursos essenciais
+                    <h4 class="tittle__3 best__tittle-3">Toda casa de aposta deve oferecer alguns recursos essenciais
                         aos usuários. Entenda quais são e qual sua importância!</h4>
                 </div>
                 <svg width="30vw" height="auto" viewBox="0 0 551 641" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1011,7 +1011,7 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2">Seja Um <span style="color: #0057FF;">Apostador Legal</span>
                     </h2>
-                    <h4 class="tittle__3 best__tittle--3">Torne-se um apostador legal com a gente! Descubra abaixo tudo
+                    <h4 class="tittle__3 best__tittle-3">Torne-se um apostador legal com a gente! Descubra abaixo tudo
                         que é preciso para fazer apostas de sucesso!</h4>
                 </div>
             </div>
@@ -1025,7 +1025,7 @@
                         Tênis, em Basquete e em várias outras modalidades e esportes.
                     </p>
                     <div class="opportunity__more more">
-                        <p class="more__text more__text--blue">GUIAS</p>
+                        <p class="more__text more__text-blue">GUIAS</p>
                         <img class="more__arrow" src="img/bluearrow.png">
                     </div>
                 </div>
@@ -1036,7 +1036,7 @@
                         Saiba o que esperar de cada uma, prós
                         e contras e o que podem oferecer a você em todos os aspectos. </p>
                     <div class="opportunity__more more">
-                        <p class="more__text more__text--blue">REVIEWS</p>
+                        <p class="more__text more__text-blue">REVIEWS</p>
                         <img class="more__arrow" src="img/bluearrow.png">
                     </div>
                 </div>
@@ -1046,7 +1046,7 @@
                         novos apostadores que se cadastram nas casas de apostas. Isso é uma oportunidade única para quem
                         está começando, pois dá um boost ao seu jogo! </p>
                     <div class="opportunity__more more">
-                        <p class="more__text more__text--blue">BÔNUS</p>
+                        <p class="more__text more__text-blue">BÔNUS</p>
                         <img class="more__arrow" src="img/bluearrow.png">
                     </div>
                 </div>
@@ -1055,7 +1055,7 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2">Como Apostar Online<span style="color: #0057FF;">Com Segurança?</span>
                     </h2>
-                    <h4 class="tittle__3 best__tittle--3">Apostar em casas de apostas só é divertido se você estiver
+                    <h4 class="tittle__3 best__tittle-3">Apostar em casas de apostas só é divertido se você estiver
                         fazendo isso de forma segura, tanto financeira como emocionalmente. Veja dicas que podem ajudar
                         a ter uma experiência tranquila em suas apostas online!</h4>
                 </div>
@@ -1129,13 +1129,13 @@
                 <div class="tittle__container">
                     <h2 class="tittle__2">Novas Casas de Apostas
                     </h2>
-                    <h4 class="tittle__3 best__tittle--3">Sempre há novidades no mercado de apostas online brasileiro,
+                    <h4 class="tittle__3 best__tittle-3">Sempre há novidades no mercado de apostas online brasileiro,
                         isso inclui a presença de novas casas de apostas. Registre-se e teste as mais recentes!</h4>
                 </div>
                 <img class="opportunities__crosses crosses" src="img/crosses.png">
             </div>
         </section>
-        <div class="banner__block filters filters__banner banner__block--line">
+        <div class="banner__block filters filters__banner banner__block-line">
             <div class="banner__element element" style="margin-right: 15vw;  justify-content: left;">
                 <img class="element__image" src="img/list.png">
                 <p class="element__text">Ordenar por:</p>
@@ -1452,7 +1452,7 @@
             </svg>
             <div class="opportunities__tittle tittle">
                 <div class="tittle__container">
-                    <h2 class="tittle__2 tittle__2--orange">Dúvidas Frequentes</span>
+                    <h2 class="tittle__2 tittle__2-orange">Dúvidas Frequentes</span>
                     </h2>
                 </div>
             </div>
@@ -1548,27 +1548,27 @@
         <div class="footer__container">
             <div class="logo footer__logo"></div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">ATUALIDADE</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">NOTÍCIAS</p>
-                    <p class="footer__navigation--item">GUIAS</p>
-                    <p class="footer__navigation--item">JOGOS DE HOJE</p>
+                <h3 class="footer__navigation-tittle">ATUALIDADE</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">NOTÍCIAS</p>
+                    <p class="footer__navigation-item">GUIAS</p>
+                    <p class="footer__navigation-item">JOGOS DE HOJE</p>
                 </div>
             </div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">APOSTAS</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">SITES DE APOSTAS</p>
-                    <p class="footer__navigation--item">CASSINOS</p>
-                    <p class="footer__navigation--item">BÔNUS DE REGISTRO</p>
+                <h3 class="footer__navigation-tittle">APOSTAS</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">SITES DE APOSTAS</p>
+                    <p class="footer__navigation-item">CASSINOS</p>
+                    <p class="footer__navigation-item">BÔNUS DE REGISTRO</p>
                 </div>
             </div>
             <div class="footer__navigation">
-                <h3 class="footer__navigation--tittle">INFORMAÇÃO</h3>
-                <div class="footer__navigation--container">
-                    <p class="footer__navigation--item">SOBRE NÓS</p>
-                    <p class="footer__navigation--item">CONTATO</p>
-                    <p class="footer__navigation--item">COMO AVALIAMOS</p>
+                <h3 class="footer__navigation-tittle">INFORMAÇÃO</h3>
+                <div class="footer__navigation-container">
+                    <p class="footer__navigation-item">SOBRE NÓS</p>
+                    <p class="footer__navigation-item">CONTATO</p>
+                    <p class="footer__navigation-item">COMO AVALIAMOS</p>
                 </div>
             </div>
             <div class="footer__countries countries">
