Casinos and offer page HTML CSS

--- a/offer.html
+++ b/offer.html
@@ -165,10 +165,10 @@
                 </div>
             </div>
 
-            <p class="page__text">A Betano chegou ao Brasil com tudo, prometendo um dos melhores sites de apostas do
+            <p class="page__text">A Betano chegou ao Brasil com tudo, prometendo um dos <span style="color: #0057FF;"> melhores sites de apostas</span> do
                 país, com conteúdo exclusivo e inovador para os apostadores brasileiros! <br><br>
 
-                Mas será que ela cumpre o que promete? Podemos confiar nessa casa de apostas para entregar um serviço de
+                Mas será que ela cumpre o que promete? Podemos <span style="font-weight: bold;"> confiar nessa casa de apostas</span> para entregar um serviço de
                 qualidade?<br><br>
 
                 Nesta review nós vamos mostrar por que a Betano é uma das maiores e melhores casas de apostas do Brasil
@@ -177,8 +177,8 @@
                 Conheça tudo sobre as Super Odds e o Bet Mentor, além de saber se ela oferece recursos como cashout e
                 livestreaming.<br><br>
 
-                E o melhor de tudo: conheça o nosso código promocional Betano exclusivo para ganhar até R$20 grátis no
-                primeiro depósito!</p>
+                E o melhor de tudo: conheça o nosso código promocional Betano exclusivo para <span style="font-weight: bold;"> ganhar até R$20 grátis no
+                primeiro depósito</span>!</p>
         </section>
 
     </main>
