Continue working with the offer page

--- a/offer.html
+++ b/offer.html
@@ -973,7 +973,7 @@
             </p>
             <img class="page__image" src="img/page7.png">
             <p class="page__text page__text-s">Verde e laranja trazem destaques para recursos do site</p>
-            <p class="page__text"><br>A maioria dos banners do site estão concentrados do lado direito, o que deixa
+            <p class="page__text">A maioria dos banners do site estão concentrados do lado direito, o que deixa
                 o<span style="font-weight: bold;"> visual
                     do site mais limpo</span>. Também são poucos os pop-ups que aparecem na tela. Esse recurso só é
                 utilizado
@@ -1006,6 +1006,155 @@
                     </div>
                 </div>
 
+            </section>
+            <p class="page__text">Atualmente a Betano possui <span style="font-weight: bold;">mais de 30 modalidades
+                    esportivas</span>. Elas ainda se desdobram
+                em outras, como é o caso dos esportes motorizados e os de inverno.
+                <br><br>
+                Temos de apontar ainda o bom número de eSports oferecidos pela casa, no total de 8. <span
+                    style="color: #0057FF;">CS:GO</span> e <span style="color: #0057FF;">League of
+                    Legends</span> são os com maior quantidade de eventos!
+                <br><br>
+                Mas claro que é o <span style="color: #0057FF;">Futebol</span> que interessa mais! Só na Europa são mais
+                de 20 campeonatos, além de
+                competições asiáticas, africanas e americanas.
+                <br><br>
+                O Brasil está bem representado, obviamente, com os principais torneios nacionais, incluindo os
+                disputados Estaduais.
+                <br><br>
+                Depois do Futebol você vai encontrar dezenas de competições de<span style="color: #0057FF;">
+                    Tênis</span>, a NBA no <span style="color: #0057FF;">Basquete</span>, a NFL no
+                <span style="color: #0057FF;"> Futebol Americano </span> a NHL no <span
+                    style="color: #0057FF;">Hóquei</span>.
+                <br><br>
+                O MMA tem praticamente todos os cards já confirmados para você apostar, enquanto os esportes de corrida
+                têm várias categorias, encabeçados pela <span style="color: #0057FF;">Formula 1</span>.
+            </p>
+            <section class="opportunities">
+                <div class="opportunities__container text opportunities__container-page">
+                    <div class="opportunity text__opportunity text__opportunity-centre flex">
+                        <p class="opportunity__text-l">
+                            Esportes menos populares são alternativas, como:
+                        </p>
+                        <ul class="opportunity__paragraph text__paragraph">
+                            <li>Sinuca</li>
+                            <li>Xadrez</li>
+                            <li>Dardos</li>
+                            <li>Tênis de Mesa</li>
+                            <li>Golfe</li>
+                            <li>Polo Aquático</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="info info-page">
+                <div class="info__tittle tittle tittle__page">
+                    <h2 class="tittle__2 tittle__2-page">Principais Competições Esportivas
+                    </h2>
+                    <svg class="crosses crosses__absolute lines__side-tittle" width="40vw" height="348"
+                        viewBox="0 0 348 348" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M223.732 346.612C302.638 335.564 357.648 262.643 346.601 183.737C335.553 104.831 262.632 49.8207 183.726 60.868C104.82 71.9154 49.8097 144.837 60.8571 223.743C71.9045 302.649 144.826 357.659 223.732 346.612Z"
+                            fill="#0057FF" />
+                        <path
+                            d="M296.13 151.851H288.531C288.528 183.466 277.563 214.102 257.505 238.539C237.447 262.976 209.536 279.702 178.528 285.867C147.521 292.033 115.334 287.256 87.4536 272.352C59.5728 257.447 37.7224 233.336 25.6253 204.127C13.5283 174.919 11.9329 142.419 21.1112 112.166C30.2895 81.9129 49.6735 55.7781 75.9606 38.2145C102.248 20.6509 133.811 12.7451 165.274 15.8442C196.736 18.9433 226.151 32.8555 248.506 55.2104C261.217 67.8861 271.297 82.9498 278.166 99.5351C285.035 116.12 288.557 133.9 288.531 151.851H303.702C303.7 116.724 291.517 82.6833 269.231 55.5304C246.944 28.3775 215.933 9.79208 181.479 2.94069C147.026 -3.9107 111.263 1.39588 80.2836 17.9563C49.3042 34.5167 25.0252 61.3063 11.5833 93.7606C-1.85861 126.215 -3.63177 162.326 6.56594 195.941C16.7637 229.556 38.3013 258.595 67.5092 278.111C96.7171 297.627 131.788 306.412 166.747 302.969C201.706 299.526 234.389 284.068 259.229 259.229C273.347 245.141 284.544 228.403 292.176 209.976C299.808 191.549 303.725 171.796 303.702 151.851H296.13Z"
+                            fill="#040218" />
+                        <path
+                            d="M221.448 151.851H213.863C213.866 166.202 208.892 180.11 199.79 191.205C190.688 202.3 178.02 209.895 163.946 212.697C149.871 215.498 135.26 213.332 122.603 206.568C109.947 199.805 100.027 188.861 94.5347 175.603C89.0425 162.344 88.3176 147.592 92.4836 133.859C96.6496 120.126 105.449 108.263 117.382 100.291C129.314 92.3188 143.642 88.7311 157.924 90.1393C172.205 91.5475 185.557 97.8643 195.703 108.013C201.465 113.767 206.035 120.6 209.151 128.123C212.267 135.646 213.868 143.709 213.863 151.851H229.048C229.047 133.992 222.854 116.685 211.523 102.879C200.192 89.074 184.425 79.6246 166.908 76.141C149.392 72.6575 131.209 75.3554 115.458 83.775C99.7076 92.1947 87.3636 105.815 80.5296 122.316C73.6956 138.816 72.7943 157.176 77.9794 174.267C83.1644 191.357 94.115 206.121 108.965 216.043C123.815 225.965 141.647 230.431 159.42 228.68C177.194 226.928 193.811 219.069 206.439 206.439C213.616 199.277 219.308 190.768 223.188 181.4C227.068 172.033 229.059 161.991 229.048 151.851H221.448Z"
+                            fill="#040218" />
+                    </svg>
+                </div>
+            </section>
+            <p class="page__text">Como dito acima, no Futebol os principais campeonatos estão contemplados.
+                <br><br>
+                Na Europa desde a <span style="color: #0057FF;">Premier League</span> à Primeira Liga Portuguesa,
+                passando por Bundesliga, LaLiga e outras
+                grandes.
+                <br><br>
+                O Futebol brasileiro não foi esquecido, tendo múltiplas opções. Dos Regionais ao<span
+                    style="color: #0057FF;"> Brasileirão</span>, não faltam
+                torneios para os torcedores apostadores!
+                <br><br>
+                Se quiser competições internacionais, a Euro, a <span style="color: #0057FF;">Libertadores</span> e
+                a<span style="color: #0057FF;"> Champions</span> são alternativas. E, claro,
+                alguns amistosos internacionais.
+                <br><br>
+                Os fãs de Futebol estão em casa na Betano!
+                <br><br>
+                E os de Tênis também, pois todos os eventos de Grand Slam podem receber apostas!
+                <br><br>
+                No Basquete, além da NBA, existem variados torneios europeus e sulamericanos. O mesmo encontramos no
+                <span style="color: #0057FF;"> Vôlei</span>, seja o tradicional ou o de praia.
+                <br><br>
+                Agora se gosta de acompanhar competições individuais, como o Ciclismo, a Betano Brasil é a casa certa! O
+                mesmo vale para corridas de carro e de moto.
+                <br><br>
+                Encontramos ao todo <span style="font-weight: bold;">mais de 1.000 eventos esportivos</span> disponíveis
+                todos os dias na Betano. Não faltam
+                boas opções se o seu objetivo é se divertir e ganhar com apostas.
+            </p>
+            <section class="info info-page">
+                <div class="info__tittle tittle tittle__page">
+                    <h2 class="tittle__2 tittle__2-page">Mercados e Tipos de Apostas
+                    </h2>
+                </div>
+            </section>
+            <p class="page__text">Não podemos reclamar por falta de mercados de apostas na Betano. Repare na rodada da
+                Premier League. Em <span style="font-weight: bold;">média de 200 a quase 400 mercados</span> por
+                partida!
+            </p>
+            <p class="page__text page__text-orange page__text-margin">A quantidade de mercados na Betano é bastante
+                apelativa!</p>
+            <img class="page__image" src="img/page8.png">
+            <section class="opportunities">
+                <div class="opportunities__container text opportunities__container-page">
+                    <div class="opportunity text__opportunity text__opportunity-centre flex">
+                        <p class="opportunity__text-l">
+                            No Futebol isso garante a presença dos seus mercados favoritos, como:
+                        </p>
+                        <ul class="opportunity__paragraph text__paragraph">
+                            <li>Handicap Asiático</li>
+                            <li>Empate Anula Aposta</li>
+                            <li>Escanteios</li>
+                            <li>Cartões</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <p class="page__text">Tem ainda o mercado de <span style="color: #0057FF;">Dupla Chance</span>, que está se
+                tornando bastante popular entre os
+                brasileiros.
+                <br><br>
+                A mesma boa variedade foi encontrada no Basquete, mas apenas em jogos entre equipes mais fortes.
+                <br><br>
+                O Tênis e outros esportes mais individuais costumam ter pouco mais de 10 mercados. Algo que se repete em
+                esportes coletivos como Hóquei e Vôlei.
+                <br><br>
+                Contudo menos alternativas não é necessariamente um ponto negativo. Por norma, a Betano traz os<span
+                    style="font-weight: bold;"> mercados
+                    principais de cada modalidade</span>, o que é excelente para os apostadores.
+            </p>
+            <section class="info info-page">
+                <div class="info__tittle tittle tittle__page">
+                    <h2 class="tittle__2 tittle__2-page">Odds
+                    </h2>
+                </div>
+            </section>
+            <p class="page__text">A Betano tem algo chamado de <span style="font-weight: bold;">Super Odds</span>. As
+                Super Odds aparecem em 1 ou 2 eventos de
+                Futebol, Basquete e Hóquei todos os dias.
+            </p>
+            <section class="opportunities opportunities-border opportunities-border-orange">
+                <div class="opportunities__line-card opportunities__line-cardorange">
+                    <p class="prize__text prize__text-white prize__text-line">SE LIGA!</p>
+                </div>
+                <div class="opportunities__tittle tittle tittle__page tittle__page-padding">
+                    <div class="tittle__container">
+                        <h4 class="tittle__3 tittle__3-padding best__tittle-3 tittle__3-page">As Super Odds estão disponíveis apenas no
+                            Pré-Jogo e no mercado 1X2!
+                        </h4>
+                    </div>
+                </div>
             </section>
         </section>
 
